--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,97 +1,83 @@
-annotation.processing.enabled=true
-annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
-annotation.processing.processors.list=
-annotation.processing.run.all.processors=true
-annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-build.classes.dir=${build.dir}/classes
+#Wed May 13 01:10:31 CAT 2020
+javadoc.splitindex=true
+file.reference.ojdbc14.jar=C\:\\oraclexe\\app\\oracle\\product\\10.2.0\\server\\jdbc\\lib\\ojdbc14.jar
 build.classes.excludes=**/*.java,**/*.form
-# This directory is removed when the project is cleaned:
-build.dir=build
-build.generated.dir=${build.dir}/generated
-build.generated.sources.dir=${build.dir}/generated-sources
-# Only compile against the classpath explicitly listed here:
+file.reference.curvesapi-1.06.jar=E\:\\Java\\poi-4.1.2\\ooxml-lib\\curvesapi-1.06.jar
+file.reference.xmlbeans-3.1.0.jar=E\:\\Java\\poi-4.1.2\\ooxml-lib\\xmlbeans-3.1.0.jar
+file.reference.log4j-1.2.17.jar=E\:\\Java\\poi-4.1.2\\lib\\log4j-1.2.17.jar
+javadoc.author=false
 build.sysclasspath=ignore
-build.test.classes.dir=${build.dir}/test/classes
-build.test.results.dir=${build.dir}/test/results
-# Uncomment to specify the preferred debugger connection transport:
-#debug.transport=dt_socket
-debug.classpath=\
-    ${run.classpath}
-debug.test.classpath=\
-    ${run.test.classpath}
-# Files in build.classes.dir which should be excluded from distribution jar
-dist.archive.excludes=
-# This directory is removed when the project is cleaned:
-dist.dir=dist
-dist.jar=${dist.dir}/21467LIbrary_system.jar
-dist.javadoc.dir=${dist.dir}/javadoc
-excludes=
-file.reference.bcmail-jdk14-1.38.jar=C:\\Users\\user\\Downloads\\library.system\\library.system\\jar_files\\bcmail-jdk14-1.38.jar
-file.reference.bcprov-jdk14-1.38.jar=C:\\Users\\user\\Downloads\\library.system\\library.system\\jar_files\\bcprov-jdk14-1.38.jar
-file.reference.bctsp-jdk14-1.38.jar=C:\\Users\\user\\Downloads\\library.system\\library.system\\jar_files\\bctsp-jdk14-1.38.jar
-file.reference.dom4j-1.6.1.jar=C:\\Users\\user\\Downloads\\library.system\\library.system\\jar_files\\dom4j-1.6.1.jar
-file.reference.Downloads-library.system=C:\\Users\\user\\Downloads\\library.system
-file.reference.itext-4.2.1.jar=C:\\Users\\user\\Downloads\\library.system\\library.system\\jar_files\\itext-4.2.1.jar
-file.reference.jcommon-1.0.15.jar=C:\\Users\\user\\Downloads\\library.system\\library.system\\jar_files\\jcommon-1.0.15.jar
-file.reference.jfreechart-1.0.12.jar=C:\\Users\\user\\Downloads\\library.system\\library.system\\jar_files\\jfreechart-1.0.12.jar
-file.reference.library.system-poi-4.1.2=C:\\Users\\user\\Downloads\\library.system\\library.system\\poi-4.1.2
-file.reference.pdf-renderer-1.0.5.jar=C:\\Users\\user\\Downloads\\library.system\\library.system\\jar_files\\pdf-renderer-1.0.5.jar
-file.reference.xml-apis-1.0.b2.jar=C:\\Users\\user\\Downloads\\library.system\\library.system\\jar_files\\xml-apis-1.0.b2.jar
-includes=**
-jar.compress=false
-javac.classpath=\
-    ${libs.hibernate4-support.classpath}:\
-    ${file.reference.Downloads-library.system}:\
-    ${file.reference.bcmail-jdk14-1.38.jar}:\
-    ${file.reference.bcprov-jdk14-1.38.jar}:\
-    ${file.reference.bctsp-jdk14-1.38.jar}:\
-    ${file.reference.dom4j-1.6.1.jar}:\
-    ${file.reference.itext-4.2.1.jar}:\
-    ${file.reference.jcommon-1.0.15.jar}:\
-    ${file.reference.jfreechart-1.0.12.jar}:\
-    ${file.reference.pdf-renderer-1.0.5.jar}:\
-    ${file.reference.xml-apis-1.0.b2.jar}:\
-    ${file.reference.library.system-poi-4.1.2}
-# Space-separated list of extra javac options
-javac.compilerargs=
-javac.deprecation=false
-javac.external.vm=true
-javac.processorpath=\
-    ${javac.classpath}
-javac.source=1.8
+file.reference.itextpdf-5.1.0.jar=E\:\\Java\\itextpdf-5.1.0.jar\\itextpdf-5.1.0.jar
 javac.target=1.8
+build.generated.dir=${build.dir}/generated
+run.classpath=${javac.classpath}\:${build.classes.dir}
+file.reference.commons-math3-3.6.1.jar=E\:\\Java\\poi-4.1.2\\lib\\commons-math3-3.6.1.jar
+file.reference.jaxb-core-2.3.0.1.jar=E\:\\Java\\poi-4.1.2\\lib\\jaxb-core-2.3.0.1.jar
+file.reference.poi-excelant-4.1.2.jar=E\:\\Java\\poi-4.1.2\\poi-excelant-4.1.2.jar
+file.reference.commons-collections4-4.4.jar=E\:\\Java\\poi-4.1.2\\lib\\commons-collections4-4.4.jar
+debug.test.classpath=${run.test.classpath}
+build.dir=build
+javac.deprecation=false
+file.reference.activation-1.1.1.jar=E\:\\Java\\poi-4.1.2\\lib\\activation-1.1.1.jar
+file.reference.jaxb-api-2.3.1.jar=E\:\\Java\\poi-4.1.2\\lib\\jaxb-api-2.3.1.jar
+test.src.dir=test
+junit.selected.version=4
+file.reference.jaxb-impl-2.3.2.jar=E\:\\Java\\poi-4.1.2\\lib\\jaxb-impl-2.3.2.jar
+includes=**
+mkdist.disabled=false
+jar.compress=false
+annotation.processing.processors.list=
+javac.external.vm=true
+javadoc.version=false
+build.classes.dir=${build.dir}/classes
+dist.dir=dist
+manifest.file=manifest.mf
+javac.source=1.8
+run.jvmargs=
+file.reference.commons-codec-1.13.jar=E\:\\Java\\poi-4.1.2\\lib\\commons-codec-1.13.jar
+file.reference.jcalendar-1.4.jar=C\:\\Users\\Nishimwe Elysee\\Documents\\NetBeansProjects\\ClassProject\\jcalendar-1.4.jar
+javac.test.processorpath=${javac.test.classpath}
+dist.archive.excludes=
+run.test.classpath=${javac.test.classpath}\:${build.test.classes.dir}
+build.generated.sources.dir=${build.dir}/generated-sources
+javadoc.notree=false
+dist.jar=${dist.dir}/library.system.jar
+file.reference.commons-compress-1.19.jar=E\:\\Java\\poi-4.1.2\\lib\\commons-compress-1.19.jar
+platform.active=default_platform
+file.reference.poi-4.1.2.jar=E\:\\Java\\poi-4.1.2\\poi-4.1.2.jar
+annotation.processing.enabled=true
+file.reference.poi-ooxml-schemas-4.1.2.jar=E\:\\Java\\poi-4.1.2\\poi-ooxml-schemas-4.1.2.jar
+main.class=library.system.view.Login
+dist.javadoc.dir=${dist.dir}/javadoc
+javadoc.additionalparam=
+javac.classpath=${libs.hibernate4-support.classpath}\:${libs.jpa2-persistence.classpath}\:${file.reference.ojdbc14.jar}\:${file.reference.jcalendar-1.4.jar}\:${file.reference.poi-4.1.2.jar}\:${file.reference.xmlbeans-3.1.0.jar}\:${file.reference.curvesapi-1.06.jar}\:${file.reference.poi-examples-4.1.2.jar}\:${file.reference.poi-excelant-4.1.2.jar}\:${file.reference.poi-ooxml-4.1.2.jar}\:${file.reference.poi-ooxml-schemas-4.1.2.jar}\:${file.reference.poi-scratchpad-4.1.2.jar}\:${file.reference.SparseBitSet-1.2.jar}\:${file.reference.activation-1.1.1.jar}\:${file.reference.commons-codec-1.13.jar}\:${file.reference.commons-collections4-4.4.jar}\:${file.reference.commons-compress-1.19.jar}\:${file.reference.commons-logging-1.2.jar}\:${file.reference.commons-math3-3.6.1.jar}\:${file.reference.jaxb-api-2.3.1.jar}\:${file.reference.jaxb-core-2.3.0.1.jar}\:${file.reference.jaxb-impl-2.3.2.jar}\:${file.reference.junit-4.12.jar}\:${file.reference.log4j-1.2.17.jar}\:${file.reference.itextpdf-5.1.0.jar}
+javadoc.noindex=false
+annotation.processing.enabled.in.editor=false
+javadoc.private=false
+javadoc.encoding=${source.encoding}
+build.test.classes.dir=${build.dir}/test/classes
+javac.compilerargs=
+source.encoding=UTF-8
+meta.inf.dir=${src.dir}/META-INF
+annotation.processing.run.all.processors=true
+excludes=
+annotation.processing.processor.options=
+file.reference.commons-logging-1.2.jar=E\:\\Java\\poi-4.1.2\\lib\\commons-logging-1.2.jar
+javac.processorpath=${javac.classpath}
+file.reference.poi-examples-4.1.2.jar=E\:\\Java\\poi-4.1.2\\poi-examples-4.1.2.jar
+build.test.results.dir=${build.dir}/test/results
+file.reference.poi-ooxml-4.1.2.jar=E\:\\Java\\poi-4.1.2\\poi-ooxml-4.1.2.jar
+javadoc.use=true
+file.reference.junit-4.12.jar=E\:\\Java\\poi-4.1.2\\lib\\junit-4.12.jar
+javadoc.nonavbar=false
+file.reference.poi-scratchpad-4.1.2.jar=E\:\\Java\\poi-4.1.2\\poi-scratchpad-4.1.2.jar
+javadoc.windowtitle=
 javac.test.classpath=\
     ${javac.classpath}:\
-    ${build.classes.dir}
-javac.test.processorpath=\
-    ${javac.test.classpath}
-javadoc.additionalparam=
-javadoc.author=false
-javadoc.encoding=${source.encoding}
-javadoc.noindex=false
-javadoc.nonavbar=false
-javadoc.notree=false
-javadoc.private=false
-javadoc.splitindex=true
-javadoc.use=true
-javadoc.version=false
-javadoc.windowtitle=
-main.class=
-manifest.file=manifest.mf
-meta.inf.dir=${src.dir}/META-INF
-mkdist.disabled=false
-platform.active=default_platform
-run.classpath=\
-    ${javac.classpath}:\
-    ${build.classes.dir}
-# Space-separated list of JVM arguments used when running the project.
-# You may also define separate properties like run-sys-prop.name=value instead of -Dname=value.
-# To set system properties for unit tests define test-sys-prop.name=value:
-run.jvmargs=
-run.test.classpath=\
-    ${javac.test.classpath}:\
-    ${build.test.classes.dir}
-source.encoding=UTF-8
+    ${build.classes.dir}:\
+    ${libs.junit_4.classpath}:\
+    ${libs.hamcrest.classpath}
+file.reference.SparseBitSet-1.2.jar=E\:\\Java\\poi-4.1.2\\lib\\SparseBitSet-1.2.jar
 src.dir=src
-test.src.dir=test
+annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+debug.classpath=${run.classpath}
